# memory_engine

./: .dockerignore  .env  .gitignore  .summary.md  COMPREHENSIVE_TOOLS_GUIDE.md  CONTRIBUTING.md  CURSOR_SETUP.md  CURSOR_SMART_MEMORY_RULE.md  DOCKER_ПЕРЕСТРОЙКА.md  Dockerfile  Dockerfile.production  Dockerfile.temporal  Dockerfile.unified  FASTAPI_MCP_GUIDE.md  GRAPH_MEMORY_GUIDE.md  IMPLEMENTATION_LOG.md  LICENSE  MEMORY_SYSTEM_ANALYSIS.md  Makefile  PROJECT_STRUCTURE.md  README.md  VERIFICATION_REPORT.md  advanced_test.ps1  browser_memory_test.py  browser_test_results.json  claude_desktop_config.json  config.example.env  cursor_fastapi_mcp_config.json  cursor_mcp_config.json  cursor_mcp_memory_test.json  debug_temporal.py  direct_test.py  docker-compose.minimal.yml  docker-compose.production.yml  docker-compose.stable.yml  docker-compose.temporal.yml  docker-compose.unified.yml  docker-compose.yml  memory_test.json  migrate_to_temporal.py  (+26 more)
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: ARCHITECTURE_ANALYSIS.md  CURSOR_ENHANCED_MEMORY_RULES.md  DEPLOYMENT_GUIDE.md  ENHANCED_MEMORY_SYSTEM.md  ENTERPRISE_ARCHITECTURE.md  PRODUCTION_READY_FINAL_REPORT.md  QUICKSTART.md  README.md  REDIS_FIX_REPORT.md  UV_SETUP.md  production-ready-guide.md  project-structure.md  tools-reference.md
examples/: graph_search.json  memory_save.json  verified_memory.json
monitoring/: prometheus.yml
scripts/: run_production_test.py  setup-cursor-config.js  start-unified-system.sh
src/: __init__.py  fastapi_mcp_server.py  fastapi_memory_server.py  fastapi_temporal_server.py  graph_memory_upgrade.py  main.py  memory_client.py  redis_service.py  temporal_memory_service.py  temporal_worker.py  unified_memory_server.py  utils.py
temporal-config/: development-sql.yaml
test_reports/: comprehensive_test_20250606_022700.json  comprehensive_test_20250606_022742.json
tests/: test_all_tools_comprehensive.py  test_api.py  test_enhanced_memory.py  test_fastapi_mcp_server.py
